--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h1 {
 p {
     font-size: 1.5rem;
     text-align: left;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'arial', Courier, monospace;
 }
 
 .container, header {
