--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ p {
 }
 
 header {
-    background-color: #33A;
+    background-color: rgb(14, 95, 50);
     color: rgb(223, 211, 41);
     font-size: 2rem;
     font-weight: bold;
