--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ p {
     font-family: 'arial', Courier, monospace;
 }
 
-.container, header {
+.container, header, .footer {
     width: 70%;
     padding: 1rem;
     /* border: 1px solid rgb(27, 26, 26); */
@@ -21,10 +21,16 @@ p {
     
 }
 
-header {
+header, .footer {
     background-color: rgb(14, 95, 50);
     color: rgb(223, 211, 41);
     font-size: 2rem;
     font-weight: bold;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.75);
+    
 }
+
+.footer > p{
+    text-align: center;
+}
+
