--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ p {
     font-family: 'arial', Courier, monospace;
 }
 
-.container, header, .footer {
+.container, header, footer {
     width: 70%;
     padding: 1rem;
     /* border: 1px solid rgb(27, 26, 26); */
@@ -21,8 +21,8 @@ p {
     
 }
 
-header, .footer {
-    background-color: rgb(14, 95, 50);
+header, footer {
+    background-color: rgb(30, 99, 179);
     color: rgb(223, 211, 41);
     font-size: 2rem;
     font-weight: bold;
@@ -30,7 +30,11 @@ header, .footer {
     
 }
 
-.footer > p{
+footer > p{
+    text-align: center;
+}
+
+header > p{
     text-align: center;
 }
 
